# GymPlanner

./: .gitignore  GymPlanner.spec  README.md  app_entry.py  environment.yml  log.json  output_week.ics  pyproject.toml
config/: legacy_config.py  settings.toml
scripts/: build_app.sh  calendar_test.py
src/gym_planner/: __init__.py  app.py  cli.py  config.py  google_calendar.py  paths.py  planner.py  workouts.py
tests/: test_config.py
